--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -41,9 +41,6 @@
     --tracking-wide: 0.025em;
     --leading-relaxed: 1.625;
     --radius-md: 0.375rem;
-    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -2341,6 +2338,10 @@
       grid-template-columns: repeat(6, minmax(0, 1fr));
     }
   }
+}
+label .label-text-alt, .label-text-alt, .form-error, .errorlist, .errorlist li {
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 @layer components {
   input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="search"], input[type="url"], input[type="tel"], input[type="date"], input[type="datetime-local"], textarea, select {
